Bug 691147 - source transparency ignored
Summary: source transparency ignored
Status: NOTIFIED FIXED
Alias: None
Product: GhostPCL
Classification: Unclassified
Component: PCL raster (show other bugs)
Version: unspecified
Hardware: Macintosh MacOS X
: P4 normal
Assignee: Henry Stiles
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-26 07:50 UTC by Henry Stiles
Modified: 2011-09-18 21:47 UTC (History)
0 users

See Also:
Customer: 861
Word Size: ---


Attachments
text2.asm (55.09 KB, application/octet-stream)
2010-02-26 07:52 UTC, Henry Stiles
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Henry Stiles 2010-02-26 07:50:47 UTC
Source transparency is "optimized away" in the attached file resulting in a
visual defect of printing objects that should not be printed.
Comment 1 Henry Stiles 2010-02-26 07:52:23 UTC
Created attachment 5993 [details]
text2.asm
Comment 2 Henry Stiles 2010-02-28 07:51:18 UTC
Fixed in 10823.  Unfortunately the change does introduce a regression in the
wtsimdi device which depended on the image code optimization.  Contrary to the
log fixing the wtsimdi regression will introduce a performance problem for that
particular device.
Comment 3 Marcos H. Woehrmann 2011-09-18 21:47:28 UTC
Changing customer bugs that have been resolved more than a year ago to closed.