Fixes bug #691147 customer 861, the optimization to strength reduce the raster operation here is wrong, it is premised on the assumption the colors are opaque.  If either texture or source is transparent the strength reduction which effectively ignores the source or pattern is wrong and it will subsequently cause opaque painting.  We've simply removed the optimization instead of conditionalizing on opaque cases, because tests indicate the reduction not that significant.  The example in the bug report was reduced from a file in the XL ATS 305 test suite.  The following customer reported bugs in that test suite are fixed by this change:

FH905UJ1.BIN pp 1,2,3,4
FH906UJ1.BIN pp 1-6
MA2K7UJ2.BIN pp 1-10
PW2K6UJ1.BIN pp 2
PWTTDUJ3.BIN pp 1

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10823 a1074d23-0009-0410-80fe-cf8c14f379e6